<?xml version="1.0"?>
<package>
  <name>gazebo2rviz</name>
  <version>0.0.0</version>
  <description>The gazebo2rviz package</description>
  <maintainer email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/gazebo2rviz</url>
  <author email="andreas.bihlmaier@gmx.de">Andreas Bihlmaier</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>
  </export>
</package>
